--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discordbot",
+  "name": "sikurei",
   "version": "1.0.0",
   "description": "Discord Bot",
   "engines": {
@@ -12,11 +12,8 @@
   "author": "KikoPT1234",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^11.4.2",
-    "dotenv": "^7.0.0",
+    "discord.js": "^11.5.1",
     "express": "^4.16.4",
-    "ms": "^2.1.1",
-    "ytdl-core": "^0.29.0",
-    "node-opus": "^0.3.1"
+    "fs": "^0.0.2"
   }
 }
